--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0-278.1.beta
+  sdk: ">=3.8.1 <3.9.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -51,7 +51,6 @@ dependencies:
   geolocator: ^14.0.2
   firebase_messaging: ^15.2.8
   google_mobile_ads: ^6.0.0
-  syncfusion_flutter_gauges: ^30.1.37
   flutter_map_cancellable_tile_provider: ^3.0.2
   onesignal_flutter: ^5.3.4
   google_generative_ai: ^0.4.7
@@ -71,7 +70,6 @@ dependencies:
   # flutter_local_notifications: ^19.3.0  # Removed to avoid conflicts with awesome_notifications
   googleapis_auth: ^2.0.0
   url_launcher: ^6.3.1
-  syncfusion_flutter_pdfviewer: ^30.1.39
   google_sign_in: ^7.1.0
   share_plus: ^11.0.0
   awesome_notifications: ^0.10.1
